deploy/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-sat-backend
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: app
