deploy/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-sat-backend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - git-sat.example.com
      secretName: git-sat-backend-tls
  rules:
    - host: git-sat.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: git-sat-backend
                port:
                  number: 80
